# start-aws-gha-runner

./: Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yaml
src/start_aws_gha_runner/: __main__.py  input.py  start.py
tests/: test_main.py  test_start.py
