[project]
name = "start_aws_gha_runner"
version = "1.0.0"
description = "Start an AWS GitHub Actions Runner"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ethan Holz", email = "ethan.holz@omsf.io" }]
dependencies = ["boto3", "gha_runner >= 0.6.2"] 

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "moto[ec2]", "responses"]

[build-system]
# We are not going to add versioningit at this time
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
start_aws_gha_runner = ["*.templ", "templates/*.templ"]

[tool.pytest.ini_options]
markers = ["slow: marks test as slow"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["F", "E", "N"]
